<resources>
    <string name="app_name">GasNugass</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adolfo">Adolfo</string>
    <string name="Logo">LOGO</string>
    <string name="logo">Logo</string>
    <string name="ProfileImage">ProfileImage</string>
    <string name="nama_tugas">Nama Tugas</string>
    <string name="gas_nugas">GAS NUGAS!!!</string>
    <string name="tanggal_pengerjaan">Tanggal Pengerjaan</string>
    <string name="deadline">Deadline</string>
    <string name="catatan">Catatan</string>
    <string name="prioritas">Prioritas</string>
    <string name="list_tugas">List Tugas</string>
    <string name="todo">TODO</string>
    <string name="submit">submit</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="add_word">add word</string>
</resources>